[package]
name = "geojson-vt-rs"
version = "0.1.1"
edition = "2021"
description = "Library for slicing GeoJSON into vector tiles"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1", features = ["float_roundtrip"] }
geojson = "0.24.1"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.4"

[dev-dependencies]
approx = "0.5.1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

[lib]
crate-type = ["cdylib", "rlib"]